Guardando cambios de caption en imagen de proyecto 1

--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -12,7 +12,7 @@
 
   <!-- swiper -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
 </head>
 
@@ -26,18 +26,19 @@
         </a>
       </div>
 
-       <button class="hamburger-menu" aria-label="Abrir menú de navegación">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </button>
+      <button class="hamburger-menu" aria-label="Abrir menú de navegación">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </button>
 
       <ul class="nav-links">
         <li><a href="../../index.html#about">About</a></li>
         <li><a href="../../index.html#projects">Projects</a></li>
         <li><a href="../../index.html#skills">Skills</a></li>
         <li><a href="../../index.html#contact">Contact</a></li>
-        <li class="profile-toggle-mobile"><button id="profile-toggle-menu" class="profile-toggle">Switch to Textile design</button></li>
+        <li class="profile-toggle-mobile"><button id="profile-toggle-menu" class="profile-toggle">Switch to Textile
+            design</button></li>
       </ul>
       <button id="profile-toggle-desktop" class="profile-toggle">Switch to Textile design</button>
     </nav>
@@ -81,108 +82,113 @@
     </div>
 
     <div class="project-media">
-        <div class="project-media img">
-          <img src="../../images/mockup_desktop & mobile.jpg" alt="Proyecto 1" data-lightbox="single" data-title="Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
-            visuales." />
-          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
-            visuales.</p>
-        </div>
-
-
-
-    <section class="project-challenge">
-      <h2>The Challenge</h2>
-      <p>The main challenge was to merge two professional identities into a single platform—without overwhelming the
-        viewer. I aimed for a portfolio that was clean, easy to navigate, and visually engaging. I also saw this as an
-        opportunity to apply what I had learned in frontend development and build something from scratch, which not only
-        showcases my design skills but also demonstrates that I can create tailored solutions for future clients or
-        collaborators.</p>
-    </section>
-
-
-    <section class="project-process">
-      <h2>The Process</h2>
-      <p>Designing for yourself is never easy.  I wanted the site to feel simple yet
-        personal, so I drew inspiration from other designers’ portfolios but always infused it with my own voice and
-        visual identity.
-        <br>
-        This project originally started as a basic assignment during my frontend course, where we built a portfolio
-        using a predefined layout provided by the school. That early version helped me grasp the fundamentals, but it also
-        sparked a desire to go further—so I reimagined the entire project to build something more authentic and
-        reflective of my identity as a designer.
-        <br>
-        From a visual and UX perspective, I focused on creating a clean layout with generous white space, bold but
-        minimal design choices, and intentional use of typography and hierarchy. I avoided unnecessary color or visual
-        clutter to ensure the experience felt direct, organized, and distraction-free. My goal was for the design to
-        feel functional, elegant, and purposeful—reflecting both my approach and personality.
-        <br>
-        I worked iteratively, trying out different layouts and interactions, while keeping accessibility and clarity in
-        mind.<br>
-      </p>
-    </section>
-
-    <section class="project-gallery">
-      <h2>Galería</h2>
-      <div class="gallery-grid">
-        <div class="gallery-item" data-lightbox="gallery" data-title="Before and actual high fidelity wireframe">
-          <img src="../../images/Before_Now.png" alt="Imagen 1" />
-          <p class="project-caption">Before and actual high fidelity wireframe</p>
-        </div>
-        <div class="gallery-item" data-lightbox="gallery" data-title="Conceptual diagram for new web portfolio">
-          <img src="../../images/Diagram.jpg" alt="Imagen 2" />
-          <p class="project-caption">Conceptual diagram for new web portfolio</p>
-
-        </div>
-        <div class="gallery-item" data-lightbox="gallery" data-title="Site map for Malala Soifer website">
-          <img src="../../images/site map_Sketch.jpg" alt="Imagen 3" />
-          <p class="project-caption">Site map for Malala Soifer website</p>
-        </div>
-
-        <div class="gallery-item" data-lightbox="gallery" data-title="Low fidelity wireframes Malala Soifer website">
-          <img src="../../images/Low Fidelity wireframes.jpg" alt="Imagen 4" />
-          <p class="project-caption">Low fidelity wireframes Malala Soifer website</p>
-        </div>
+      <div class="project-media img">
+        <img src="../../images/mockup_desktop & mobile.jpg" alt="Proyecto 1" data-lightbox="single" data-title="Final responsive design of my personal portfolio, optimized for desktop and mobile." />
+        <p class="project-caption">Final responsive design of my personal portfolio, optimized for desktop and mobile.
+        </p>
       </div>
-    </section>
 
-    <section class="project-inspiration">
-      <h2>Visual Inspiration</h2>
-      <p>
-        Before diving into the design, I created a moodboard to guide the visual direction of my portfolio.
-        I was inspired by clean and bold layouts, with generous white space, minimal use of color,
-        and clear typographic hierarchy.
-      </p>
-      <p>
-        The goal was to avoid distraction and let the content speak for itself—creating a space that feels
-        intentional, functional, and aligned with my UX-first mindset. Every visual decision,
-        from the restrained palette to the structure of the layout, was made to support clarity and ease of use.
-      </p>
-       </section>
 
-        
+
+      <section class="project-challenge">
+        <h2>The Challenge</h2>
+        <p>The main challenge was to merge two professional identities into a single platform—without overwhelming the
+          viewer. I aimed for a portfolio that was clean, easy to navigate, and visually engaging. I also saw this as an
+          opportunity to apply what I had learned in frontend development and build something from scratch, which not
+          only
+          showcases my design skills but also demonstrates that I can create tailored solutions for future clients or
+          collaborators.</p>
+      </section>
+
+
+      <section class="project-process">
+        <h2>The Process</h2>
+        <p>Designing for yourself is never easy. I wanted the site to feel simple yet
+          personal, so I drew inspiration from other designers’ portfolios but always infused it with my own voice and
+          visual identity.
+          <br>
+          This project originally started as a basic assignment during my frontend course, where we built a portfolio
+          using a predefined layout provided by the school. That early version helped me grasp the fundamentals, but it
+          also
+          sparked a desire to go further—so I reimagined the entire project to build something more authentic and
+          reflective of my identity as a designer.
+          <br>
+          From a visual and UX perspective, I focused on creating a clean layout with generous white space, bold but
+          minimal design choices, and intentional use of typography and hierarchy. I avoided unnecessary color or visual
+          clutter to ensure the experience felt direct, organized, and distraction-free. My goal was for the design to
+          feel functional, elegant, and purposeful—reflecting both my approach and personality.
+          <br>
+          I worked iteratively, trying out different layouts and interactions, while keeping accessibility and clarity
+          in
+          mind.<br>
+        </p>
+      </section>
+
+      <section class="project-gallery">
+        <h2>Galería</h2>
+        <div class="gallery-grid">
+          <div class="gallery-item" data-lightbox="gallery" data-title="Before and actual high fidelity wireframe">
+            <img src="../../images/Before_Now.png" alt="Imagen 1" />
+            <p class="project-caption">Before and actual high fidelity wireframe</p>
+          </div>
+          <div class="gallery-item" data-lightbox="gallery" data-title="Conceptual diagram for new web portfolio">
+            <img src="../../images/Diagram.jpg" alt="Imagen 2" />
+            <p class="project-caption">Conceptual diagram for new web portfolio</p>
+
+          </div>
+          <div class="gallery-item" data-lightbox="gallery" data-title="Site map for Malala Soifer website">
+            <img src="../../images/site map_Sketch.jpg" alt="Imagen 3" />
+            <p class="project-caption">Site map for Malala Soifer website</p>
+          </div>
+
+          <div class="gallery-item" data-lightbox="gallery" data-title="Low fidelity wireframes Malala Soifer website">
+            <img src="../../images/Low Fidelity wireframes.jpg" alt="Imagen 4" />
+            <p class="project-caption">Low fidelity wireframes Malala Soifer website</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="project-inspiration">
+        <h2>Visual Inspiration</h2>
+        <p>
+          Before diving into the design, I created a moodboard to guide the visual direction of my portfolio.
+          I was inspired by clean and bold layouts, with generous white space, minimal use of color,
+          and clear typographic hierarchy.
+        </p>
+        <p>
+          The goal was to avoid distraction and let the content speak for itself—creating a space that feels
+          intentional, functional, and aligned with my UX-first mindset. Every visual decision,
+          from the restrained palette to the structure of the layout, was made to support clarity and ease of use.
+        </p>
+      </section>
+
+
       <div class="project-media">
         <div class="project-media img">
-          <img src="../../images/Inspirational Moodboards.png" alt="Proyecto 1" data-lightbox="single" data-title="Inspirational moodboard" />
+          <img src="../../images/Inspirational Moodboards.png" alt="Proyecto 1" data-lightbox="single"
+            data-title="Inspirational moodboard" />
           <p class="project-caption">Inspirational moodboard</p>
         </div>
 
-   
 
 
-      <section class="project-result">
-        <h2>The Solution (or Final Outcome — still in progress)</h2>
-        <p>The site is still evolving, but I’ve managed to build a solid structure that reflects who I am as a designer
-          today. It’s responsive, intuitive, and feels like me. It’s a space that I’m proud of—and a living project I’ll
-          keep improving.</p>
-      </section>
+
+        <section class="project-result">
+          <h2>The Solution (or Final Outcome — still in progress)</h2>
+          <p>The site is still evolving, but I’ve managed to build a solid structure that reflects who I am as a
+            designer
+            today. It’s responsive, intuitive, and feels like me. It’s a space that I’m proud of—and a living project
+            I’ll
+            keep improving.</p>
+        </section>
 
         <div class="project-media">
-      <video autoplay muted loop playsinline class="project-video">
-        <source src="../../videos/Video_presentacion.mp4" type="video/mp4">
-        <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
-      </video>
-      <p class="video-description">Flow of the site</p>
-    </div>
+          <video autoplay muted loop playsinline class="project-video">
+            <source src="../../videos/Video_presentacion.mp4" type="video/mp4">
+            <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
+          </video>
+          <p class="video-description">Flow of the site</p>
+        </div>
 
         <section class="project-learnings">
           <h2>Outcomes & Learnings</h2>
@@ -238,7 +244,7 @@
         <li><a href="../../Index.html#contact">Contact</a></li>
       </ul>
 
-       <ul class="footer-social-links">
+      <ul class="footer-social-links">
         <li><a href="https://www.behance.net/MalalaSoifer" target="_blank" aria-label="Behance"><i
               class="fab fa-behance"></i></a></li>
         <li><a href="https://www.linkedin.com/in/malalasoifer/?locale=en_US" target="_blank" aria-label="LinkedIn"><i
@@ -261,29 +267,29 @@
 
   <!-- Lightbox -->
   <!-- Lightbox -->
-<div id="customLightbox" class="custom-lightbox">
-  <div class="lightbox-content">
-    <button class="lightbox-close" aria-label="Cerrar imagen expandida">
-      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
-        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-        class="feather feather-x">
-        <line x1="18" y1="6" x2="6" y2="18"></line>
-        <line x1="6" y1="6" x2="18" y2="18"></line>
-      </svg>
-    </button>
+  <div id="customLightbox" class="custom-lightbox">
+    <div class="lightbox-content">
+      <button class="lightbox-close" aria-label="Cerrar imagen expandida">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="feather feather-x">
+          <line x1="18" y1="6" x2="6" y2="18"></line>
+          <line x1="6" y1="6" x2="18" y2="18"></line>
+        </svg>
+      </button>
 
-    <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-        <!-- SE LLENA DESDE JS -->
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <!-- SE LLENA DESDE JS -->
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
       </div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-pagination"></div>
-    </div>
 
-    <div class="lightbox-title">Título</div>
+      <div class="lightbox-title">Título</div>
+    </div>
   </div>
-</div>
 
 
 
