Guardando avances en Proyecto 6

--- a/Index.html
+++ b/Index.html
@@ -132,8 +132,8 @@ Explore my world between digital and textile. UX/UI, illustration, patterns, and
 
         <div class="project-card uxui-project card-6 fade-element">
           <a href="/Proyectos/ux-ui/project-6-uxui.html">
-            <img src="./images/5.jpg" alt="UX/UI Project" class="project-image">
-            <h3 class="project-title">Graphic Design projects</h3>
+            <img src="./images/raise&exit_card project.png" alt="UX/UI Project" class="project-image">
+            <h3 class="project-title">Raise & Exit_Podcast Identity</h3>
           </a>
         </div>
 
