--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Portfolio personal | Malala Soifer</title>
+  <title>Raise & Exit Kit</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <!-- CSS path to be relative from subfolder -->
@@ -265,7 +265,6 @@
   <script src="../../js/script.js"></script>
 
 
-  <!-- Lightbox -->
   <!-- Lightbox -->
   <div id="customLightbox" class="custom-lightbox">
     <div class="lightbox-content">
