--- a/Proyectos/ux-ui/project-2-uxui.html
+++ b/Proyectos/ux-ui/project-2-uxui.html
@@ -239,25 +239,35 @@
         </div>
     </footer>
 
-
   <!-- FIXED: Updated script path to be relative -->
   <script src="../../js/script.js"></script>
 
- <!-- Lightbox -->
+
+  <!-- Lightbox -->
   <div id="customLightbox" class="custom-lightbox">
     <div class="lightbox-content">
-        <button class="lightbox-close" aria-label="Cerrar imagen expandida">
-    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x">
-        <line x1="18" y1="6" x2="6" y2="18"></line>
-        <line x1="6" y1="6" x2="18" y2="18"></line>
-    </svg>
-</button>
-        <img src="" alt="Expanded Image" class="lightbox-image">
-        <div class="lightbox-title"></div>
+      <button class="lightbox-close" aria-label="Cerrar imagen expandida">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="feather feather-x">
+          <line x1="18" y1="6" x2="6" y2="18"></line>
+          <line x1="6" y1="6" x2="18" y2="18"></line>
+        </svg>
+      </button>
+
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <!-- SE LLENA DESDE JS -->
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+      </div>
+
+      <div class="lightbox-title">Título</div>
     </div>
-</div>
-
-
+  </div>
+  
 </body>
 
 </html>
