--- a/Proyectos/ux-ui/project-6-uxui.html
+++ b/Proyectos/ux-ui/project-6-uxui.html
@@ -4,13 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Graphic design Projects</title>
+  <title>Raise & Exit – Visual Identity for Podcast</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <!-- CSS path to be relative from subfolder -->
   <link rel="stylesheet" href="../../css/styles.css">
 
-  
+  <!-- swiper -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
 </head>
 
 <body>
@@ -23,10 +26,10 @@
         </a>
       </div>
 
-       <button class="hamburger-menu" aria-label="Abrir menú de navegación">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
+      <button class="hamburger-menu" aria-label="Abrir menú de navegación">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </button>
 
       <ul class="nav-links">
@@ -34,7 +37,8 @@
         <li><a href="../../index.html#projects">Projects</a></li>
         <li><a href="../../index.html#skills">Skills</a></li>
         <li><a href="../../index.html#contact">Contact</a></li>
-        <li class="profile-toggle-mobile"><button id="profile-toggle-menu" class="profile-toggle">Switch to Textile design</button></li>
+        <li class="profile-toggle-mobile"><button id="profile-toggle-menu" class="profile-toggle">Switch to Textile
+            design</button></li>
       </ul>
       <button id="profile-toggle-desktop" class="profile-toggle">Switch to Textile design</button>
     </nav>
@@ -57,18 +61,22 @@
 
     <div class="project-container">
       <section class="project-header">
-        <h1 class="project-title">Graphic Design Projects</h1>
+        <h1 class="project-title">Raise & Exit – Visual Identity for Podcast</h1>
 
         <div class="project-brief">
           <h2>Brief</h2>
-          <p>I needed a portfolio where I could bring together my two profiles, since I recently transitioned into the
-            digital world and wanted to channel all my experience and potential in one single space.</p>
+          <p>I created a bold, modern visual identity for Raise & Exit, Avasta’s new podcast .
+
+            The design system brings together direction, transition, and energy through graphic elements like arrows and
+            clean typography. The assets were tailored for multiple digital platforms while keeping a strong and
+            coherent identity.
+          </p>
 
           <div class="project-ficha">
-            <div><strong>Timeline:</strong> x months</div>
-            <div><strong>Service:</strong> UX/UI - web designer</div>
-            <div><strong>Role:</strong> Principal Designer</div>
-            <div><strong>Tools:</strong> Figma, Photoshop, Illustrator, Visual Studio Code, HTML, CSS, JS</div>
+            <div><strong>Timeline:</strong> 1 month</div>
+            <div><strong>Service:</strong> Brand Identity</div>
+            <div><strong>Role:</strong> Graphic Designer</div>
+            <div><strong>Tools:</strong>  Illustrator, Photoshop, Figma</div>
           </div>
         </div>
       </section>
@@ -83,57 +91,140 @@
 </div>
 -->
 
-    <section class="project-challenge">
+    <!--<section class="project-challenge">
       <h2>The Challenge</h2>
       <p>The main challenge was to merge both worlds —my background in textile design and my new path in UX/UI— into one
         clear, engaging, easy-to-read place that wouldn’t overwhelm, and that felt like me.</p>
     </section>
 
 
-    <section class="project-process">
+   <section class="project-process">
       <h2>The Process</h2>
       <p>It was a really enjoyable process, especially because this time the project was about me. But I have to admit
         that at times it felt a bit overwhelming —when the focus is on yourself, applying everything you've learned can
         feel tricky. It’s often easier when the portfolio belongs to someone else. Still, I took on the challenge with
-        excitement.</p>
-    </section>
+        excitement.</p> 
+    </section>-->
+
 
     <section class="project-gallery">
-      <h2>Galería</h2>
-      <div class="gallery-grid">
-        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
-        <img src="../../images/SwapNow.png" alt="Imagen 1" />
-        </div>
-       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
-       <img src="../../images/SwapNow.png" alt="Imagen 2" />
-       </div>
-       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
-       <img src="../../images/SwapNow.png" alt="Imagen 3" />
-       </div>
-       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
-       <img src="../../images/SwapNow.png" alt="Imagen 4" />
-       </div>      
-      </div>
-      </section>
 
-    <section class="project-result">
+      <h2>Final Logo</h2>
+      <p>Main podcast logo. A dynamic composition that communicates movement, clarity, and purpose with a strong visual
+        impact.</p>
+
+
+      <div class="gallery-grid">
+        <div class="gallery-item" data-lightbox="gallery" data-title="Circular podcast logo">
+          <img src="../../images/circular Logo_R&E.png" alt="Circular podcast logo" />
+          <p class="project-caption">Circular podcast logo.</p>
+        </div>
+
+        <div class="gallery-item" data-lightbox="gallery" data-title="Square podcast logo">
+          <img src="../../images/Square Logo.png" alt="Square podcast logo" />
+          <p class="project-caption">Square podcast logo. </p>
+        </div>
+      </div>
+
+      <h2> Social Media Banners</h2>
+      <p>Banner variations optimized for LinkedIn and YouTube — designed to be legible and impactful while keeping
+        visual harmony across channels.</p>
+
+      <div class="gallery-grid">
+        <div class="gallery-item" data-lightbox="gallery" data-title="Youtube banner and Mockup">
+          <img src="../../images/Youtube template_R&E.png" alt="Youtube banner and Mockup" />
+          <p class="project-caption">Youtube banner and Mockup</p>
+        </div>
+
+
+        <div class="gallery-item" data-lightbox="gallery" data-title="Linkedin Mockup">
+          <img src="../../images/Linkedin Banner_R&E.png" alt="Linkedin Mockup" />
+          <p class="project-caption">Linkedin Mockup</p>
+        </div>
+      </div>
+
+      <h2> Email Template</h2>
+      <p>Responsive email template designed in Figma for Raise & Exit.
+        Includes desktop and mobile versions to ensure clear layout and consistent branding across devices.</p>
+
+      <div class="gallery-grid">
+        <div class="gallery-item" data-lightbox="gallery" data-title="Email template_desktop">
+          <img src="../../images/email template_desktop@2x.png" alt="Email template_desktop" />
+          <p class="project-caption">Email layout preview for desktop— with placeholder content and adaptable structure.
+          </p>
+        </div>
+
+        <div class="gallery-item" data-lightbox="gallery" data-title="Email template_mobile">
+          <img src="../../images/email template_mobile@2x@2x.png" alt="Email template_mobile" />
+          <p class="project-caption">Email layout preview for mobile — with placeholder content and adaptable structure.
+          </p>
+        </div>
+      </div>
+
+      <h2>Visual System Overview</h2>
+      <ul>
+        <li>Typeface: Aktiv Grotesk</li>
+        <li>Colors: From Avasta’s brand toolkit</li>
+        <li>Visuals: Arrows, gradients, bold contrast — all used to suggest action, momentum, and direction.</li>
+      </ul>
+
+      <div class="gallery-grid">
+
+        <div class="gallery-item" data-lightbox="gallery" data-title="Visual System Overview">
+          <img src="../../images/Visual_R&E.png" alt="Visual System Overview" />
+          <p class="project-caption">Visual System Overview
+          </p>
+        </div>
+      </div>
+
+      <h2> Inspiration & Visual Research</h2>
+      <p>The concept of “exit” was explored through wayfinding systems, directional icons, and signage-inspired
+        graphics. This research informed the shape and feel of the final visuals.</p>
+
+      <div class="gallery-grid">
+        <div class="gallery-item" data-lightbox="gallery" data-title="Inspirational Moodboard">
+          <img src="../../images/Moodboard_R&E.png" alt="Inspirational Moodboard" />
+          <p class="project-caption">Inspirational Moodboard</p>
+        </div>
+      </div>
+
+      <h2> Logo Exploration Variants</h2>
+      <p>Exploration of color schemes, letter arrangements, and directional elements before landing on the final logo.</p>
+
+      <div class="gallery-grid">
+        <div class="gallery-item" data-lightbox="gallery" data-title="Logo variations">
+          <img src="../../images/Proceso Logo 1 R&E.png" alt="Logo variations" />
+          <p class="project-caption">Logo variations</p>
+        </div>
+
+        <div class="gallery-item" data-lightbox="gallery" data-title="Logo variations and layouts">
+          <img src="../../images/Proceso Logo 2_R&E.png" alt="Logo variations and layouts" />
+          <p class="project-caption">Logo variations and layouts</p>
+        </div>
+      </div>
+
+    </section>
+
+
+
+    <!--<section class="project-result">
       <h2>The Solution</h2>
       <p>I found a way to combine my UX/UI knowledge with what I’ve been learning about front-end and web development.
         The goal was simple: to build a clean and functional portfolio that could reflect both sides of me as a
         designer.</p>
-    </section>
+    </section>-->
 
-    <div class="project-media">
+    <!--<div class="project-media">
     <div class="project-media">
         <img src="../../images/SwapNow.png" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
-    </div>
+    </div>-->
 
-    <section class="project-learnings">
+    <!--<section class="project-learnings">
       <h2>Outcomes & Learnings</h2>
       <p>I learned that working for yourself is not always easy, which is why I turned to the people around me for
         feedback and support during the tricky moments. I also discovered how rewarding it is to see things take shape.
         And above all, I’m proud to have built this portfolio from scratch.</p>
-    </section>
+    </section>-->
 
     <!--Previous project| back to top | Next project-->
 
@@ -163,21 +254,21 @@
       </a>
     </div>
 
-      </main>
+  </main>
 
-      <!-- Footer with proper structure -->
+  <!-- Footer with proper structure -->
 
-    <footer class="fade-element" id="footer">
-      <div class="footer-content">
-        <!-- FIXED: Updated navigation links to go back to main page sections -->
-        <ul class="footer-nav-links">
-          <li><a href="../../Index.html#about">About</a></li>
-          <li><a href="../../Index.html#projects">Projects</a></li>
-          <li><a href="../../Index.html#skills">Skills</a></li>
-          <li><a href="../../Index.html#contact">Contact</a></li>
-        </ul>
+  <footer class="fade-element" id="footer">
+    <div class="footer-content">
+      <!-- FIXED: Updated navigation links to go back to main page sections -->
+      <ul class="footer-nav-links">
+        <li><a href="../../Index.html#about">About</a></li>
+        <li><a href="../../Index.html#projects">Projects</a></li>
+        <li><a href="../../Index.html#skills">Skills</a></li>
+        <li><a href="../../Index.html#contact">Contact</a></li>
+      </ul>
 
-         <ul class="footer-social-links">
+      <ul class="footer-social-links">
         <li><a href="https://www.behance.net/MalalaSoifer" target="_blank" aria-label="Behance"><i
               class="fab fa-behance"></i></a></li>
         <li><a href="https://www.linkedin.com/in/malalasoifer/?locale=en_US" target="_blank" aria-label="LinkedIn"><i
@@ -187,31 +278,42 @@
         <li><a href="mailto:malalasoifer@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a></li>
       </ul>
 
-        <div class="footer-copyright">
-          <p>&copy; 2025 Malala Soifer. All rights reserved.</p>
-          <p>Designed & Developed by Malala Soifer.</p>
-        </div>
+      <div class="footer-copyright">
+        <p>&copy; 2025 Malala Soifer. All rights reserved.</p>
+        <p>Designed & Developed by Malala Soifer.</p>
       </div>
-    </footer>
+    </div>
+  </footer>
 
   <!-- FIXED: Updated script path to be relative -->
   <script src="../../js/script.js"></script>
 
- <!-- Lightbox -->
+
+
+  <!-- Lightbox -->
   <div id="customLightbox" class="custom-lightbox">
     <div class="lightbox-content">
-        <button class="lightbox-close" aria-label="Cerrar imagen expandida">
-    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x">
-        <line x1="18" y1="6" x2="6" y2="18"></line>
-        <line x1="6" y1="6" x2="18" y2="18"></line>
-    </svg>
-</button>
-        <img src="" alt="Expanded Image" class="lightbox-image">
-        <div class="lightbox-title"></div>
+      <button class="lightbox-close" aria-label="Cerrar imagen expandida">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="feather feather-x">
+          <line x1="18" y1="6" x2="6" y2="18"></line>
+          <line x1="6" y1="6" x2="18" y2="18"></line>
+        </svg>
+      </button>
+
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <!-- SE LLENA DESDE JS -->
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+      </div>
+
+      <div class="lightbox-title">Título</div>
     </div>
-</div>
-
-
+  </div>
 
 </body>
 
